--- a/eAppointment.Domain/eAppointment.Domain.csproj
+++ b/eAppointment.Domain/eAppointment.Domain.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Ardalis.SmartEnum" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="TS.EntityFrameworkCore.GenericRepository" Version="8.0.3" />
+  </ItemGroup>
+
 </Project>
